# d1cli

./: CLAUDE.md  FEATURES.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts
.github/workflows/: ci.yml
src/: cli.ts
src/commands/: describe.ts  help.ts  indexes.ts  registry.ts  schema.ts  tables.ts
src/completion/: completer.ts  keywords.ts  schema-cache.ts
src/config/: args.ts  wrangler.ts
src/connection/: factory.ts  interface.ts  local.ts  remote.ts  resolve-local-path.ts
src/d1cli/: __init__.py  commands.py  completer.py  config.py  connection.py  formatter.py  main.py  style.py  wrangler.py
src/highlight/: highlighter.ts
src/output/: csv.ts  formatter.ts  json.ts  pager.ts  table.ts  vertical.ts
src/repl/: history.ts  input.ts  line-editor.ts  prompt.ts  repl.ts
test/completion/: completer.test.ts
test/config/: wrangler.test.ts
test/connection/: resolve-local-path.test.ts
test/output/: csv.test.ts  json.test.ts  table.test.ts  vertical.test.ts
test/repl/: input.test.ts
tests/: test_completer.py
